fixed: изменение зависимостей и кода для Java 8 + Spring 5